ui fix, hash router, predeploy

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "vite-react-typescript-starter",
+  "homepage": "https://mlclub-sret.github.io/",
+  "name": "ml-club-sret",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "pnpm run build",
     "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
